# AutonomousBusinessOS-Demo

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
application/: chat_service.py  customer_service.py
config/: settings.py
core/: models.py
infrastructure/database/: chroma_client.py
infrastructure/llm/: ollama_client.py
presentation/: styles.css  ui_manager.py
presentation/tabs/: chat_tab.py  customers_tab.py  test_data_tab.py
